# ensvar-6980

./: README.md  collate-results.py  example-samplesheet.csv  main.nf  modules.json  nextflow.config  pyproject.toml  test-params.yaml  time-mem-plot.R  time-mem-plot.py
conf/: codon.config  modules.config  process.config
